Hopefully last attempt to fix docs CI

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,6 +19,6 @@ jobs:
         uses: langroodi/doxygenize@4186fba316b72a7d790b1fff255f6a1dabc1db31
         with:
           doxygenconf: './docs/build/Doxyfile'
-          htmloutput: './docs_html/'
+          htmloutput: './docs/build/docs_html/'
           ghpagesbranch: 'gh-pages'
           ghpagesdir: './v0.8/docs'
