Update default config

--- a/config.ini
+++ b/config.ini
@@ -13,9 +13,9 @@ path = /etc/nawa/sock.d/nawa.sock
 ;permissions = 0600
 permissions =
 ; UNIX only: owner of the socket
-owner = tinyp
+owner = user
 ; UNIX only: group of the socket
-group = tinyp
+group = user
 ; set SO_REUSEADDR socket option
 ; default value: on
 reuseaddr = on
@@ -33,9 +33,9 @@ reuseaddr = on
 
 [privileges]
 ; user NAWA should run as (if started as root)
-user = tinyp
+user = user
 ; group NAWA should run as (if started as root)
-group = tinyp
+group = user
 
 [post]
 ; Maximum post size (in kiB)
@@ -65,7 +65,7 @@ request_handler = fastcgi
 
 [application]
 ; Path to application to load
-path = ./cmake-build-debug/libnawatest.so
+path = ./build/libnawatest.so
 
 [logging]
 ; Log level
