--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -50,11 +50,6 @@ jobs:
         # Prefix the list here with "+" to use these queries and those in the config file.
         # queries: ./path/to/local/query, your-org/your-repo/queries@main
 
-    # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
-    # If this step fails, then you should remove it and run the build manually (see below)
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v1
-
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
 
@@ -62,9 +57,14 @@ jobs:
     #    and modify them (or add more) to build your code if your project
     #    uses a compiled language
 
-    #- run: |
-    #   make bootstrap
-    #   make release
+    - run: |
+        sudo apt-get update
+        sudo apt-get install -y --no-install-recommends libssl-dev libargon2-dev libboost-dev \
+        libboost-system-dev libboost-thread-dev libboost-chrono-dev libboost-date-time-dev libcurl4-openssl-dev
+        mkdir -p _lgtm_build_dir
+        cd _lgtm_build_dir
+        cmake -DCMAKE_BUILD_TYPE=Release -DBuildTests=ON -DBuildStaticLib=ON ..
+        make
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
